Lsh 관심분야 (#12)
* chore (0515): 관심분야 데이터 추가

* chore (0516): 관심분야 스키마 변경 및 데이터 추가

* fix (0516): 로그인 후 대쉬보드로 연결되도록 수정

* feat (0516): 회원가입 후 관심분야 선택 및 저장